[build] - transfer wordpress to jekyll

--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 ---
 layout: default
-title: Your New Jekyll Site
+title: Portfolio of a web designer in Northampton
 ---
 
-<div id="home">
-  <h1>Blog Posts</h1>
-  <ul class="posts">
-    {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-    {% endfor %}
-  </ul>
-</div>
+<img src="{{base.url}}/assets/img/welcome.png" alt="Welcome" />
