[websites] - remove gedling - remove ntu proj link

--- a/websites.html
+++ b/websites.html
@@ -91,7 +91,7 @@ title: Tom Hopcraft
 	<img src="{{base.url}}/assets/img/web_cancer.jpg" alt="" />
     <div class="infomain">
     	<header class="infotitle">
-        	<p class="left">NTU Alumni Association</p><p class="right"><a href="http://chewx.co.uk/NTU/cancer/" target="_blank">visit</a></p>
+        	<p class="left">NTU Alumni Association</p>
         </header>
         <footer class="infotext">
         	<p class="text">
@@ -102,19 +102,3 @@ title: Tom Hopcraft
         </footer>
     </div>
 </article>
-
-<!--<article class="object">
-	<img src="{{base.url}}/assets/img/web_gedling.jpg" alt="Gedling Southbank" />
-    <div class="infomain">
-    	<header class="infotitle">
-        	<p class="left">Gedling Southbank FC</p><p class="right"></p>
-        </header>
-        <footer class="infotext">
-        	<p class="text">
-            	A final project for my degree. I set to re-design their existing website. This progressed into a fully responsive HTML5 and CSS3 wordpress website.
-            </p>
-            <p class="more">
-            </p>
-        </footer>
-    </div>
-</article>-->
