[contact] - update email

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact
 ---
 
 <p>
-	Any enquiries, please contact me through any of the below or <a href="mailto:tom@chewx.co.uk">tom[at]chewx.co.uk</a>.
+	Any enquiries, please contact me through any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
 </p>
 <div class="social">
     <a href="http://www.twitter.com/CHEWX" target="_blank"><img src="{{base.url}}/assets/img/icons/twitt.png" alt="twitter"/></a>
