[tweaks] - tweaks to layout and wording throughout

--- a/contact.html
+++ b/contact.html
@@ -4,11 +4,19 @@ title: Contact
 ---
 
 <p>
-	Any enquiries, please contact me through any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
+	Any enquiries, please contact me through the hire button, any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
 </p>
 <div class="social">
-    <a href="http://www.twitter.com/CHEWX" target="_blank"><img src="{{base.url}}/assets/img/icons/twitt.png" alt="twitter"/></a>
-    <a href="http://www.dribbble.com/CHEWX" target="_blank"><img src="{{base.url}}/assets/img/icons/drib.png" alt="dribbble"/></a>
-    <a href="http://www.linkedin.com/pub/tom-hopcraft/2a/780/81a" target="_blank"><img src="{{base.url}}/assets/img/icons/linked.png" alt="linkedin"/></a>
-    <a href="http://www.github.com/CHEWX" target="_blank"><img src="{{base.url}}/assets/img/icons/github.png" alt="GitHub"/></a>
+    <a href="http://www.twitter.com/CHEWX" target="_blank">
+    	<img src="{{base.url}}/assets/img/icons/twitt.png" alt="twitter"/>
+    </a>
+    <a href="http://www.dribbble.com/CHEWX" target="_blank">
+    	<img src="{{base.url}}/assets/img/icons/drib.png" alt="dribbble"/>
+    </a>
+    <a href="http://www.linkedin.com/pub/tom-hopcraft/2a/780/81a" target="_blank">
+    	<img src="{{base.url}}/assets/img/icons/linked.png" alt="linkedin"/>
+    </a>
+    <a href="http://www.github.com/CHEWX" target="_blank">
+    	<img src="{{base.url}}/assets/img/icons/github.png" alt="GitHub"/>
+    </a>
 </div>
