--- a/websites.html
+++ b/websites.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Tom Hopcraft
+title: Website Design
 ---
 
 <article class="object">
@@ -11,7 +11,7 @@ title: Tom Hopcraft
         </header>
         <footer class="infotext">
         	<p class="text">
-            	Since starting work as a web developer at a <a href="http://www.jupix.com" target="_blank">property software</a> company I found a need for a niche barn portal. This concept has been designed and built from the ground-up in HTML5, CSS3 using RWD technology built on a Wordpress platform.
+            	When I started working as a web developer at a <a href="http://www.jupix.com" rel="nofollow" target="_blank">property software</a> company I found a need for a niche barn portal. This concept has been designed and built from the ground-up in HTML5, CSS3 using RWD technology built on a Wordpress platform.
             </p>
             <p class="more">
 
