--- a/about.html
+++ b/about.html
@@ -1,16 +1,16 @@
 ---
 layout: default
-title: Tom Hopcraft
+title: About
 ---
 
 <div class="sixcol">
 	<p>
-		As you can see my name is Tom Hopcraft and I am a front-end developer and web designer from the Midlands, England. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in responsive web design.
+		As you can see my name is Tom Hopcraft and I am a front-end developer and web designer from Northampton, UK. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in Responsive web design and Wordpress.
 	</p>
 </div>
 <div class="sixcol last">
 	<p>
-		I am currently serving as a Front End Developer Developer at Propeller Communications. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="/contact">contact me</a>.
+		I am currently serving as a Web Developer at Made By Platform. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com" title="web design inspiration">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="/contact">contact me</a>.
 	</p>
 </div>
 <div class="clear"></div>
