[icons] - add font icons to contact #1

--- a/contact.html
+++ b/contact.html
@@ -8,15 +8,15 @@ title: Contact
 </p>
 <div class="social">
     <a href="http://www.twitter.com/CHEWX" target="_blank">
-    	<img src="{{base.url}}/assets/img/icons/twitt.png" alt="twitter"/>
+    	<i class="fa fa-twitter"></i>
     </a>
     <a href="http://www.dribbble.com/CHEWX" target="_blank">
-    	<img src="{{base.url}}/assets/img/icons/drib.png" alt="dribbble"/>
+    	<i class="fa fa-dribbble"></i>
     </a>
     <a href="http://www.linkedin.com/pub/tom-hopcraft/2a/780/81a" target="_blank">
-    	<img src="{{base.url}}/assets/img/icons/linked.png" alt="linkedin"/>
+    	<i class="fa fa-linkedin"></i>
     </a>
     <a href="http://www.github.com/CHEWX" target="_blank">
-    	<img src="{{base.url}}/assets/img/icons/github.png" alt="GitHub"/>
+    	<i class="fa fa-github-alt"></i>
     </a>
 </div>
