[web] - add admire the web v3

--- a/websites.html
+++ b/websites.html
@@ -4,14 +4,32 @@ title: Website Design
 ---
 
 <article class="object">
-	<img src="{{base.url}}/assets/img/web_barnsearch.jpg" alt="Barn Search" />
+    <img src="{{base.url}}/assets/img/web_admire-the-web_v3.jpg" alt="Admire The Web V3" />
     <div class="infomain">
-    	<header class="infotitle">
-        	<p class="left">Barn Search</p><p class="right"><a href="http://www.barnsearch.co.uk" target="_blank">visit</a></p>
+        <header class="infotitle">
+            <p class="left">Admire The Web V3</p><p class="right"><a href="http://admiretheweb.com" target="_blank">visit</a></p>
         </header>
         <footer class="infotext">
-        	<p class="text">
-            	When I started working as a web developer at a <a href="http://www.jupix.com" rel="nofollow" target="_blank">property software</a> company I found a need for a niche barn portal. This concept has been designed and built from the ground-up in HTML5, CSS3 using RWD technology built on a Wordpress platform.
+            <p class="text">
+                With V3 I wanted the design to be more content focused as well as heavily working on site performance. This version was written in HTML5 and SCSS using <a href="http://bem.info/" target="_blank" rel="nofollow">BEM</a>/<a href="https://smacss.com/" target="_blank" rel="nofollow">SMACSS</a> methodologies.
+                <!-- @TODO - you can read more about this here -->
+            </p>
+            <p class="more">
+
+            </p>
+        </footer>
+    </div>
+</article>
+
+<article class="object">
+    <img src="{{base.url}}/assets/img/web_barnsearch.jpg" alt="Barn Search" />
+    <div class="infomain">
+        <header class="infotitle">
+            <p class="left">Barn Search</p><p class="right"><a href="http://www.barnsearch.co.uk" target="_blank">visit</a></p>
+        </header>
+        <footer class="infotext">
+            <p class="text">
+                When I started working as a web developer at a <a href="http://www.jupix.com" rel="nofollow" target="_blank">property software</a> company I found a need for a niche barn portal. This concept has been designed and built from the ground-up in HTML5, CSS3 using RWD technology built on a Wordpress platform.
             </p>
             <p class="more">
 
