[websites] - remove link to BS and add titles

--- a/websites.html
+++ b/websites.html
@@ -7,7 +7,7 @@ title: Website Design
     <img src="{{base.url}}/assets/img/web_admire-the-web_v3.jpg" alt="Admire The Web V3" />
     <div class="infomain">
         <header class="infotitle">
-            <p class="left">Admire The Web V3</p><p class="right"><a href="http://admiretheweb.com" target="_blank">visit</a></p>
+            <p class="left">Admire The Web V3</p><p class="right"><a href="http://admiretheweb.com" title="web design inspiration" target="_blank">visit</a></p>
         </header>
         <footer class="infotext">
             <p class="text">
@@ -25,7 +25,7 @@ title: Website Design
     <img src="{{base.url}}/assets/img/web_barnsearch.jpg" alt="Barn Search" />
     <div class="infomain">
         <header class="infotitle">
-            <p class="left">Barn Search</p><p class="right"><a href="http://www.barnsearch.co.uk" target="_blank">visit</a></p>
+            <p class="left">Barn Search</p>
         </header>
         <footer class="infotext">
             <p class="text">
@@ -42,7 +42,7 @@ title: Website Design
 	<img src="{{base.url}}/assets/img/web_admirev2.jpg" alt="Admire The Web V2" />
     <div class="infomain">
     	<header class="infotitle">
-        	<p class="left">Admire The Web V2</p><p class="right"><a href="http://admiretheweb.com" target="_blank">visit</a></p>
+        	<p class="left">Admire The Web V2</p><p class="right"><a href="http://admiretheweb.com" title="web design inspiration" target="_blank">visit</a></p>
         </header>
         <footer class="infotext">
         	<p class="text">
@@ -59,7 +59,7 @@ title: Website Design
 	<img src="{{base.url}}/assets/img/web_admirecreative.jpg" alt="Admire Creative" />
     <div class="infomain">
     	<header class="infotitle">
-        	<p class="left">Admire Creative</p><p class="right"><a href="http://admirecreative.co.uk" target="_blank">visit</a></p>
+        	<p class="left">Admire Creative</p><p class="right"><a href="http://admirecreative.co.uk" title="web design northampton" target="_blank">visit</a></p>
         </header>
         <footer class="infotext">
         	<p class="text">
