[tweak] - general title tag changes

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@ title: Contact
 ---
 
 <p>
-	Any enquiries, please contact me through the hire button, any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
+	Any enquiries, please contact me through the <a href="http://www.admirecreative.co.uk" target="_blank" title="Web design Northampton">hire</a> button, any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
 </p>
 <div class="social">
     <a href="http://www.twitter.com/CHEWX" target="_blank">
