--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Portfolio of a web designer in Northampton
+title: Portfolio of a freelance web designer and developer in Northampton
 ---
 
-<img src="{{base.url}}/assets/img/welcome.png" alt="Welcome" />
+<img src="{{base.url}}/assets/img/welcome.png" alt="Freelance Web Design Northampton" />
