--- a/about.html
+++ b/about.html
@@ -5,12 +5,12 @@ title: About
 
 <div class="sixcol">
 	<p>
-		As you can see my name is Tom Hopcraft and I am a front-end developer and web designer from Northampton, UK. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in Responsive web design and Wordpress.
+		As you can see my name is Tom Hopcraft and I am a freelance front-end developer and web designer from Northampton, UK. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in Responsive web design and Wordpress.
 	</p>
 </div>
 <div class="sixcol last">
 	<p>
-		I am currently serving as a Web Developer at Made By Platform. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com" title="web design inspiration">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="/contact">contact me</a>.
+		I am currently serving as a Web Developer at <a href="http://www.madebyplatform.com" rel="nofollow" target="_blank">Made By Platform</a>. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com" title="web design inspiration">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="/contact" title="freelance web designer">contact me</a>.
 	</p>
 </div>
 <div class="clear"></div>
