[web] - update cc and ac works

--- a/websites.html
+++ b/websites.html
@@ -22,6 +22,23 @@ title: Website Design
 </article>
 
 <article class="object">
+    <img src="{{base.url}}/assets/img/web_carcal_v2.jpg" alt="CARCAL V2" />
+    <div class="infomain">
+        <header class="infotitle">
+            <p class="left">CAR CAL V2</p><p class="right"><a href="http://carcal.co.uk" target="_blank">visit</a></p>
+        </header>
+        <footer class="infotext">
+            <p class="text">
+                V2 of CAR CAL was to focus on mobile, so I designed and developed in browser using the mobile-first approach. Also updating the code through-out to use the latest technologies.
+            </p>
+            <p class="more">
+
+            </p>
+        </footer>
+    </div>
+</article>
+
+<article class="object">
     <img src="{{base.url}}/assets/img/web_barnsearch.jpg" alt="Barn Search" />
     <div class="infomain">
         <header class="infotitle">
@@ -56,14 +73,14 @@ title: Website Design
 </article>
 
 <article class="object">
-	<img src="{{base.url}}/assets/img/web_admirecreative.jpg" alt="Admire Creative" />
+	<img src="{{base.url}}/assets/img/web_admirecreative_v2.jpg" alt="Admire Creative" />
     <div class="infomain">
     	<header class="infotitle">
         	<p class="left">Admire Creative</p><p class="right"><a href="http://admirecreative.co.uk" title="web design northampton" target="_blank">visit</a></p>
         </header>
         <footer class="infotext">
         	<p class="text">
-            	I wanted to set-up a sideline freelance website that I can use, I set up this very simple one page website for that. It was mainly a experimental HTML5, one page, typographic website that will stay for the short term.
+            	I wanted to set-up a sideline freelance website that I can use. I wanted it to be fast so I built this website in the flat-file CMS <a href="http://picocms.org" target="_blank" rel="nofollow">Pico</a>.
             </p>
             <p class="more">
 
