[contact] - add structure to page

--- a/contact.html
+++ b/contact.html
@@ -3,20 +3,32 @@ layout: default
 title: Contact
 ---
 
-<p>
-	Any enquiries, please contact me through the <a href="http://www.admirecreative.co.uk" target="_blank" title="Web design Northampton">hire</a> button, any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
-</p>
-<div class="social">
+<article class="object">
+    <div class="infomain mt0">
+
+        <header class="infotitle">
+            <h1 class="mb0">{{ page.title }}</h1>
+        </header>
+        <main class="infotext">
+            <p>
+                Any enquiries, please contact me through the <a href="http://www.admirecreative.co.uk" target="_blank" title="Web design Northampton">hire</a> button, any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
+            </p>
+        </main>
+
+    </div>
+</article>
+
+<div class="social align--center">
     <a href="http://www.twitter.com/CHEWX" target="_blank">
-    	<i class="fa fa-twitter"></i>
+        <i class="fa fa-twitter"></i>
     </a>
     <a href="http://www.dribbble.com/CHEWX" target="_blank">
-    	<i class="fa fa-dribbble"></i>
+        <i class="fa fa-dribbble"></i>
     </a>
     <a href="http://www.linkedin.com/pub/tom-hopcraft/2a/780/81a" target="_blank">
-    	<i class="fa fa-linkedin"></i>
+        <i class="fa fa-linkedin"></i>
     </a>
     <a href="http://www.github.com/CHEWX" target="_blank">
-    	<i class="fa fa-github-alt"></i>
+        <i class="fa fa-github-alt"></i>
     </a>
 </div>
