[about] - add strucure and skills

--- a/about.html
+++ b/about.html
@@ -3,14 +3,48 @@ layout: default
 title: About
 ---
 
-<div class="sixcol">
-	<p>
-		As you can see my name is Tom Hopcraft and I am a freelance front-end developer and web designer from Northampton, UK. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in Responsive web design and Wordpress.
-	</p>
-</div>
-<div class="sixcol last">
-	<p>
-		I am currently serving as a Web Developer at <a href="http://www.madebyplatform.com" rel="nofollow" target="_blank">Made By Platform</a>. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com" title="web design inspiration">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="/contact" title="freelance web designer">contact me</a>.
-	</p>
-</div>
-<div class="clear"></div>
+<article class="object">
+    <div class="infomain mt0">
+
+        <header class="infotitle">
+            <h1 class="mb0">{{ page.title }}</h1>
+        </header>
+        <main class="infotext clearfix">
+            <div class="sixcol">
+                <p>
+                    As you can see my name is Tom Hopcraft and I am a freelance front-end developer and web designer from Northampton, UK. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in Responsive web design and Wordpress.
+                </p>
+            </div>
+            <div class="sixcol last">
+                <p>
+                    I am currently serving as a Web Developer at <a href="http://www.madebyplatform.com" rel="nofollow" target="_blank">Made By Platform</a>. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com" title="web design inspiration">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="/contact" title="freelance web designer">contact me</a>.
+                </p>
+            </div>
+        </main>
+
+    </div>
+</article>
+
+<article class="object">
+    <div class="infomain mt0">
+
+        <header class="infotitle">
+            <h2 class="mb0">Skills</h2>
+        </header>
+        <main class="infotext">
+            <ul>
+                <li>xHTML and HTML5</li>
+                <li>CSS3, Sass, Scss and Less</li>
+                <li>Fundamentals of PHP, JavaScript and jQuery</li>
+                <li>Responsive Web Design</li>
+                <li>WordPress</li>
+                <li>WooCommerce</li>
+                <li>User Experience</li>
+                <li>SEO</li>
+                <li>Git Version Control</li>
+                <li>Adobe Photoshop and Illustrator</li>
+            </ul>
+        </main>
+
+    </div>
+</article>
