[home] - change homepage image

--- a/index.html
+++ b/index.html
@@ -3,4 +3,6 @@ layout: default
 title: Portfolio of a freelance web designer and developer in Northampton
 ---
 
-<img src="{{base.url}}/assets/img/welcome.png" alt="Freelance Web Design Northampton" />
+<div class="home-text">
+    My name is <span class="home-text__ultra">Tom Hopcraft</span> &amp; I am a <em>Freelance</em> <span class="home-text__highlight">Front-End Developer</span> &amp; <span class="home-text__bold">Web Designer</span> from Northampton.
+</div>
