[web] - remove carcal v2 and update blurb

--- a/websites.html
+++ b/websites.html
@@ -22,14 +22,14 @@ title: Website Design
 </article>
 
 <article class="object">
-    <img src="{{base.url}}/assets/img/web_carcal_v2.jpg" alt="CARCAL V2" />
+    <img src="{{base.url}}/assets/img/web_carcal_v2.jpg" alt="CARCAL" />
     <div class="infomain">
         <header class="infotitle">
-            <p class="left">CAR CAL V2</p><p class="right"><a href="http://carcal.co.uk" target="_blank">visit</a></p>
+            <p class="left">CAR CAL</p><p class="right"><a href="http://carcal.co.uk" target="_blank">visit</a></p>
         </header>
         <footer class="infotext">
             <p class="text">
-                V2 of CAR CAL was to focus on mobile, so I designed and developed in browser using the mobile-first approach. Also updating the code through-out to use the latest technologies.
+                With CARCAL I wanted to set-up a calendar to keep track of the car show season in the UK. This was built on a WordPress platform using an Events Manager plug-in. It's built in HTML5 and responds down to mobile.
             </p>
             <p class="more">
 
@@ -81,23 +81,6 @@ title: Website Design
         <footer class="infotext">
         	<p class="text">
             	I wanted to set-up a sideline freelance website that I can use. I wanted it to be fast so I built this website in the flat-file CMS <a href="http://picocms.org" target="_blank" rel="nofollow">Pico</a>.
-            </p>
-            <p class="more">
-
-            </p>
-        </footer>
-    </div>
-</article>
-
-<article class="object">
-	<img src="{{base.url}}/assets/img/web_carcal.jpg" alt="CARCAL" />
-    <div class="infomain">
-    	<header class="infotitle">
-        	<p class="left">CAR CAL</p><p class="right"><a href="http://carcal.co.uk" target="_blank">visit</a></p>
-        </header>
-        <footer class="infotext">
-        	<p class="text">
-            	With CARCAL I wanted to set-up a calendar to keep track of the car show season in the UK. This was built on a Wordpress platform using an Events Manager plug-in. It's built in HTML5 and responds down to mobile.
             </p>
             <p class="more">
 
