[web] - add admire spacees and re orgranise

--- a/websites.html
+++ b/websites.html
@@ -39,6 +39,40 @@ title: Website Design
 </article>
 
 <article class="object">
+    <img src="{{base.url}}/assets/img/web_admire-spaces.jpg" alt="Admire Spaces" />
+    <div class="infomain">
+        <header class="infotitle">
+            <p class="left">Admire Spaces</p><p class="right"><a href="http://admirespaces.com" target="_blank">visit</a></p>
+        </header>
+        <footer class="infotext">
+            <p class="text">
+                Currated spaces inspiration from around the home. Built with Jekyll and populated through Pinterest's RSS feed with JavaScript and Google's Feed Api.
+            </p>
+            <p class="more">
+
+            </p>
+        </footer>
+    </div>
+</article>
+
+<article class="object">
+    <img src="{{base.url}}/assets/img/web_admirecreative_v2.jpg" alt="Admire Creative" />
+    <div class="infomain">
+        <header class="infotitle">
+            <p class="left">Admire Creative</p><p class="right"><a href="http://admirecreative.co.uk" title="web design northampton" target="_blank">visit</a></p>
+        </header>
+        <footer class="infotext">
+            <p class="text">
+                I wanted to set-up a sideline freelance website that I can use. I wanted it to be fast so I built this website in the flat-file CMS <a href="http://picocms.org" target="_blank" rel="nofollow">Pico</a>.
+            </p>
+            <p class="more">
+
+            </p>
+        </footer>
+    </div>
+</article>
+
+<article class="object">
     <img src="{{base.url}}/assets/img/web_barnsearch.jpg" alt="Barn Search" />
     <div class="infomain">
         <header class="infotitle">
@@ -64,23 +98,6 @@ title: Website Design
         <footer class="infotext">
         	<p class="text">
             	A project I set up to collate all the brilliant web design inspiration I come across. It was to help me with my degree and has succeeded to that effect. V2 now uses full Responsive Web Design techniques to respond to any screen width.
-            </p>
-            <p class="more">
-
-            </p>
-        </footer>
-    </div>
-</article>
-
-<article class="object">
-	<img src="{{base.url}}/assets/img/web_admirecreative_v2.jpg" alt="Admire Creative" />
-    <div class="infomain">
-    	<header class="infotitle">
-        	<p class="left">Admire Creative</p><p class="right"><a href="http://admirecreative.co.uk" title="web design northampton" target="_blank">visit</a></p>
-        </header>
-        <footer class="infotext">
-        	<p class="text">
-            	I wanted to set-up a sideline freelance website that I can use. I wanted it to be fast so I built this website in the flat-file CMS <a href="http://picocms.org" target="_blank" rel="nofollow">Pico</a>.
             </p>
             <p class="more">
 
