[contact] - add former form and style tweaks

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 ---
 
-<article class="object">
+<div class="object">
     <div class="infomain mt0">
 
         <header class="infotitle">
@@ -11,12 +11,18 @@ title: Contact
         </header>
         <main class="infotext">
             <p>
-                Any enquiries, please contact me through the <a href="http://www.admirecreative.co.uk" target="_blank" title="Web design Northampton">hire</a> button, any of the below or <a href="mailto:tom@admirecreative.co.uk">tom[at]admirecreative.co.uk</a>.
+                Any enquiries, please contact me through the <a href="http://www.admire.agency" target="_blank" title="Web design Northampton">hire</a> button, any of the below or <a href="mailto:tom@admire.agency">tom[at]admire.agency</a>.
             </p>
         </main>
 
     </div>
-</article>
+</div>
+
+<div class="object">
+
+    <iframe src="http://formerapp.com/f/E07m0h1rOT6gzAvM/embed" width="100%" height="500" scrolling="no" frameborder="0" border="0"></iframe>
+
+</div>
 
 <div class="social align--center">
     <a href="http://www.twitter.com/CHEWX" target="_blank">
