[update] - general copy tweaks

--- a/about.html
+++ b/about.html
@@ -12,12 +12,12 @@ title: About
         <main class="infotext clearfix">
             <div class="sixcol">
                 <p>
-                    As you can see my name is Tom Hopcraft and I am a freelance front-end developer and web designer from Northampton, UK. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in Responsive web design and Wordpress.
+                    As you can see my name is Tom Hopcraft and I am a freelance front-end developer and web designer from Northampton, UK. I graduated from Nottingham Trent University studying BA Multimedia – specialising in Interactive Media in 2012. I can code to W3C standards in both XHTML and HTML5 as well as CSS3 and have a strong interest in Responsive web design and WordPress.
                 </p>
             </div>
             <div class="sixcol last">
                 <p>
-                    I am currently serving as a Web Developer at <a href="http://www.madebyplatform.com" rel="nofollow" target="_blank">Made By Platform</a>. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com" title="web design inspiration">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="/contact" title="freelance web designer">contact me</a>.
+                    I am currently freelancing full-time. I also curate and run Admire the Web – a project that I started at University to keep a track of all the good <a target="_blank" href="http://www.admiretheweb.com" title="web design inspiration">website design inspiration</a>. I have long term aspirations to continue to work in the creative industry and within ten years of my first graduation job, I hope to own a small creative studio. If you’d like to get in touch, do not hesitate to <a href="mailto:tom@admire.agency?subject=Project Enquiry" title="freelance web designer">contact me</a>.
                 </p>
             </div>
         </main>
@@ -42,7 +42,27 @@ title: About
                 <li>User Experience</li>
                 <li>SEO</li>
                 <li>Git Version Control</li>
+                <li>Site performance</li>
+            </ul>
+        </main>
+
+    </div>
+</article>
+
+<article class="object">
+    <div class="infomain mt0">
+
+        <header class="infotitle">
+            <h2 class="mb0">Applications</h2>
+        </header>
+        <main class="infotext">
+            <ul>
                 <li>Adobe Photoshop and Illustrator</li>
+                <li>Sublime Text</li>
+                <li>Command Line (iTerm/Terminal)</li>
+                <li>Grunt/Gulp</li>
+                <li>Bower/NPM</li>
+                <li>Chrome - Web Inspector</li>
             </ul>
         </main>
 
