--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: Portfolio of a freelance web designer and developer in Northampton
 ---
 
 <div class="home-text">
-    My name is <span class="home-text__ultra">Tom Hopcraft</span> &amp; I am a <em>Freelance</em> <span class="home-text__highlight">Front-End Developer</span> &amp; <span class="home-text__bold">Web Designer</span> from Northampton.
+    My name is <span class="home-text__ultra">Tom Hopcraft</span> &amp; I am a <em>Freelance</em> <span class="home-text__highlight">Front-End Developer</span> &amp; <span class="home-text__bold">Web Designer</span> from Northampton, UK.
 </div>
