--- a/websites.html
+++ b/websites.html
@@ -4,6 +4,23 @@ title: Website Design
 ---
 
 <article class="object">
+    <img src="{{base.url}}/assets/img/web_admire-agency.jpg" alt="Admire Agency" />
+    <div class="infomain">
+        <header class="infotitle">
+            <p class="left">Admire Agency</p><p class="right"><a href="http://admire.agency" title="web design northampton" target="_blank">visit</a></p>
+        </header>
+        <footer class="infotext">
+            <p class="text">
+                I wanted to set-up a freelance alias website that I can use. Minimally designed in-browser using Ajax, Griddle and Pace.
+            </p>
+            <p class="more">
+
+            </p>
+        </footer>
+    </div>
+</article>
+
+<article class="object">
     <img src="{{base.url}}/assets/img/web_admire-the-web_v3.jpg" alt="Admire The Web V3" />
     <div class="infomain">
         <header class="infotitle">
@@ -59,11 +76,11 @@ title: Website Design
     <img src="{{base.url}}/assets/img/web_admirecreative_v2.jpg" alt="Admire Creative" />
     <div class="infomain">
         <header class="infotitle">
-            <p class="left">Admire Creative</p><p class="right"><a href="http://admirecreative.co.uk" title="web design northampton" target="_blank">visit</a></p>
+            <p class="left">Admire Pico Theme</p><p class="right"><a href="http://themes.admirecreative.co.uk/admire-pico/" target="_blank">visit</a></p>
         </header>
         <footer class="infotext">
             <p class="text">
-                I wanted to set-up a sideline freelance website that I can use. I wanted it to be fast so I built this website in the flat-file CMS <a href="http://picocms.org" target="_blank" rel="nofollow">Pico</a>.
+                A flat-file <a href="http://picocms.org" target="_blank" rel="nofollow">Pico</a> CMS theme for a portfolio style website.
             </p>
             <p class="more">
 
