--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Portfolio of a freelance web designer and developer in Northampton
+title: Tom Hopcraft — Freelance Developer
 ---
 
 <p class="c-blend">
-    A Freelance Developer from Northampton, UK. <s>Currently</s> working as a Developer at UK Brand and Design agency, <a href="http://www.madebysix.com" target="_blank" class="[ link--raise ][ js-six-trigger ]" title="Six">Six</a>. A BA Interactive Media graduate from Nottingham Trent University. Specialist in WordPress development.
+    A Freelance Developer from Northampton, UK. <s>Currently</s> working as a Developer at UK Brand and Design agency, <a href="http://www.madebysix.com" target="_blank">Six</a>. A BA Interactive Media graduate from Nottingham Trent University. Specialist in WordPress development.
 </p>
